# walker-svn

branches/flatRL/: CMakeLists.txt
branches/flatRL/Data/Config/: ChainControl_2_PD.ini  ChainControl_2_VD.ini  ChainControl_3_PD_GC.ini  ChainControl_3_VD.ini  ChainControl_4_PD.ini  ChainControl_4_RL.ini  ChainControl_4_VD.ini  ChainControl_5_PD.ini  ChainControl_5_PD_GC.ini  ChainControl_5_RL.ini  ChainTest_3.ini  DirectRL_3.ini  PD_4_gc.ini
branches/flatRL/Data/ControlSchemes/: sausage.xml
branches/flatRL/Data/Models/: arena.dae  human.bullet  robot.dae  sausage3.dae  sausage4.dae  sausage_test.dae
branches/flatRL/Data/Plots/: ChainTest.plot
branches/flatRL/Data/SkyBox/: Thumbs.db
branches/flatRL/lib/include/: Config.h  SlonEngine.h
branches/flatRL/lib/include/Actuator/: JointActuator.h
branches/flatRL/lib/include/Control/Chain/: ChainEnvironment.h  FlatRLControl.h
branches/flatRL/lib/include/Control/Humanoid/: Control.h
branches/flatRL/lib/include/Control/InverseDynamics/: Environment.h
branches/flatRL/lib/include/Control/Utility/: ControlElement.h  EnvironmentWrapper.h  LooseTimer.h
branches/flatRL/lib/include/Learning/: BR_learning.hpp  iterate_learning.hpp  plain_direct_rl.hpp
branches/flatRL/lib/include/Utility/: Math.h
branches/flatRL/lib/src/: CMakeLists.txt  Scene.cpp
branches/flatRL/lib/src/Control/: PhysicsEnvironment.cpp
branches/flatRL/lib/src/Control/Chain/: FlatRLControl.cpp
branches/flatRL/lib/src/Control/InverseDynamics/: Control.cpp  RLControl.cpp
branches/flatRL/lib/src/Control/Utility/: LooseTimer.cpp
branches/flatRL/lib/src/Plot/: DrawLinePlot.cpp
branches/flatRL/test/Approximation/: CMakeLists.txt
branches/flatRL/test/Controller/: CMakeLists.txt
branches/flatRL/walker/: CMakeLists.txt  main.cpp
branches/humanoid/: CMakeLists.txt  Configure.cmake
branches/humanoid/Data/Config/: ChainControl_2_gc.ini  ChainControl_3_gc.ini  ChainControl_4_gc.ini  ChainControl_5.ini  ChainControl_5_gc.ini  HumanConfig.ini  PD_2_gc.ini  PD_4.ini  PD_4_gc.ini  PD_5.ini  PD_5_gc.ini  Scene.ini
branches/humanoid/Data/Models/: cube.dae  hand.dae  human.dae  sausage2.dae  sausage3.dae  sausage4.dae  sausage5.dae  sausagec.dae
branches/humanoid/include/Control/: Control.h
branches/humanoid/include/Control/Chain/: Control.h  Environment.h  RLControl.h
branches/humanoid/include/Control/Python/: PythonEnvironment.h
branches/humanoid/include/Control/Utility/: EnvironmentWrapper.h  GenericActionMap.h
branches/humanoid/include/Learning/: reinforcement_learning_wrapper.hpp  scalar_neural_network.hpp  stub_learning.hpp
branches/humanoid/include/Plot/: DrawLinePlot.h
branches/humanoid/include/Statistics/: ValueFunctionPlot.h
branches/humanoid/src/: Scene.cpp  main.cpp
branches/humanoid/src/Control/Chain/: ChainEnvironment.cpp  Control.cpp  Environment.cpp  HeuristicControl.cpp
branches/humanoid/src/Control/Humanoid/: Control.cpp
branches/humanoid/src/Control/InverseDynamics/: Control.cpp  Environment.cpp
branches/humanoid/src/Control/Python/: PythonEnvironment.cpp
branches/humanoid/src/Control/Utility/: ControlElement.cpp
branches/humanoid/src/Plot/: DrawLinePlot.cpp  DumpLinePlot.cpp
branches/humanoid/src/Utility/: PhysicsDebug.cpp
trunk/: CMakeLists.txt  Configure.cmake  FindNecessaryLibraries.cmake
trunk/Data/Config/: ChainControl_2.ini  ChainControl_2_PD_GC.ini  ChainControl_2_RL.ini  ChainControl_2_gc.ini  ChainControl_3.ini  ChainControl_3_PD.ini  ChainControl_3_RL.ini  ChainControl_3_gc.ini  ChainControl_4.ini  ChainControl_4_PD_GC.ini  ChainControl_4_gc.ini  ChainControl_5.ini  ChainControl_5_VD.ini  ChainControl_5_gc.ini  ChainTest_2.ini  ChainTest_3.ini  ChainTest_4.ini  ChainTest_5.ini  PD_2_gc.ini  PD_3.ini  PD_3_gc.ini  PD_4.ini  PD_4_gc.ini  PD_5.ini  PD_5_gc.ini  Scene.ini
trunk/Data/Models/: arena.dae  cube.dae  human.bullet  sausage.dae  sausage1.dae  sausage2.dae  sausage3.dae  sausage4.dae  sausage5.dae
trunk/Data/Plots/: ChainTest.plot
trunk/Testing/Approximation/: CMakeLists.txt
trunk/Testing/Car/: main.cpp
trunk/Testing/Serialization/: main.cpp
trunk/include/: Scene.h
trunk/include/Control/: PhysicsControl.h  PhysicsEnvironment.h
trunk/include/Control/Chain/: Control.h  PDControl.h
trunk/include/Control/Humanoid/: Environment.h
trunk/include/Control/Utility/: DirectControl.h  EnvironmentWrapper.h
trunk/include/Learning/: reinforcement_learning.hpp
trunk/include/Plot/: DrawLinePlot.h  LinePlot.h
trunk/lib/include/: Config.h.cmake  Scene.h
trunk/lib/include/Actuator/: EulerActuator.h
trunk/lib/include/Control/: Environment.h  PhysicsControl.h  PhysicsEnvironment.h
trunk/lib/include/Control/Chain/: ChainControl.h  Control.h  HeuristicControl.h  PDControl.h  RLControl.h
trunk/lib/include/Learning/: approximator_wrapper.hpp  config.hpp  function.hpp  linear_function.hpp  matrix.hpp  natural_actor_critic.hpp  neural_network.hpp  plain_direct_learning.hpp  serialization.hpp  td_lambda_learning.hpp  vector_function.hpp
trunk/lib/include/Plot/: DumpLinePlot.h
trunk/lib/include/Statistics/: NumActionsPlot.h  Statistics.h
trunk/lib/include/Utility/: PhysicsDebug.h
trunk/lib/src/: CMakeLists.txt  Scene.cpp
trunk/lib/src/Plot/: DrawLinePlot.cpp
trunk/src/: CMakeLists.txt  Scene.cpp  main.cpp
trunk/src/Control/: PhysicsControl.cpp  PhysicsEnvironment.cpp
trunk/src/Control/Chain/: Control.cpp  Environment.cpp  PDControl.cpp  RLControl.cpp
trunk/src/Control/Humanoid/: Control.cpp
trunk/src/Control/InverseDynamics/: Control.cpp  Environment.cpp
trunk/src/Control/Utility/: LooseTimer.cpp
trunk/src/Utility/: PhysicsDebug.cpp
trunk/test/: CMakeLists.txt
trunk/test/Approximation/: CMakeLists.txt  main.cpp
trunk/test/Car/: CMakeLists.txt  CarLearning.h
trunk/test/Controller/: CMakeLists.txt  main.cpp
trunk/test/Serialization/: CMakeLists.txt
trunk/walker/: main.cpp
workspace/: CMakeLists.txt
workspace/generic/: CMakeLists.txt
workspace/msvs_2008/: CMakeLists.txt
workspace/msvs_2010/: CMakeLists.txt
(+9 files in other folders)
