CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (WalkerYard)

SET (RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
	
SET (SIMPLE_GL_CONFIGURE_INTRUSIVE 		ON)	
SET (SIMPLE_GL_PATH						${PROJECT_SOURCE_DIR}/SimpleGL)
SET (XMLPP_CONFIGURE_INTRUSIVE 			ON)
SET (XMLPP_PATH							${PROJECT_SOURCE_DIR}/XML++)
SET (SLON_ENGINE_CONFIGURE_INTRUSIVE 	ON)
SET (SLON_ENGINE_PATH					${PROJECT_SOURCE_DIR}/SlonEngine)

ADD_SUBDIRECTORY(SimpleGL)
ADD_SUBDIRECTORY(XML++)
ADD_SUBDIRECTORY(SlonEngine)
ADD_SUBDIRECTORY(WalkerYard)
      