SET ( TARGET_NAME "WalkerYard" )
SET ( TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_SOURCES} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${CONTROLLER_LIBRARY_NAME} )
SET_TARGET_PROPERTIES ( ${TARGET_NAME} PROPERTIES 
                        RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_OUTPUT_DIRECTORY}" )