INCLUDE_DIRECTORIES ( 
    ${TARGET_HEADER_PATH} 
    ${SlonEngine_INCLUDE_DIR}
)

# list headers
SET (APPROXIMATION_TARGET_NAME "Approximation")

# headers
SET ( APPROXIMATION_TARGET_HEADERS
    ${TARGET_LEARNING_HEADERS}
)

# sources
SET ( APPROXIMATION_TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${APPROXIMATION_TARGET_NAME} ${APPROXIMATION_TARGET_HEADERS} ${APPROXIMATION_TARGET_SOURCES} )
