SET ( CONTROLLER_TARGET_NAME "Controller" )
SET ( CONTROLLER_TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${CONTROLLER_TARGET_NAME} ${CONTROLLER_TARGET_SOURCES} )
TARGET_LINK_LIBRARIES( ${CONTROLLER_TARGET_NAME} ${CONTROLLER_LIBRARY_NAME} )
SET_TARGET_PROPERTIES( ${CONTROLLER_TARGET_NAME} PROPERTIES
    FOLDER "Test"
)