SET ( TARGET_NAME "Controller" )
SET ( TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_SOURCES} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${CONTROLLER_LIBRARY_NAME} )
SET_TARGET_PROPERTIES( ${TARGET_NAME} PROPERTIES
    FOLDER                      "Test"
    RUNTIME_OUTPUT_DIRECTORY    "${RUNTIME_OUTPUT_DIRECTORY}"
)